workflow triggers adjusted

--- a/.github/workflows/ci.build.yml
+++ b/.github/workflows/ci.build.yml
@@ -3,16 +3,18 @@
 
 # This continuous integration pipeline is triggered anytime a user pushes code to the repo.
 # This pipeline builds the Wpf project, runs unit tests, then saves the MSIX build artifact.
-name: Continuous Integration
+name: Continuous Integration - Build
 
 on:
-  push:
-    branches:
-      - 'master'
-      - 'develop'
-  pull_request_target:
-    branches:
-      - 'master'
+  workflow_call:
+    inputs:
+      solutionFile:
+        required: true
+        type: string
+      artifactName:
+        required: true
+        type: string
+        default: BuildArtifacts
 
 jobs:
   build:
