--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       matrix:
         dotnetVersion: [ '6.0', '7.0' ]
-        targetplatform: [ 'x86', 'x64' ]
+        targetplatform: [ 'x86', 'x64', 'ARM64' ]
     
     runs-on: windows-latest
     
@@ -77,7 +77,7 @@ jobs:
       env:
         #AppxBundle: Always
         #BuildMode: SideloadOnly
-        TargetPlatform: ${{ matrix.targetplatform }}
+        TargetPlatform: 'x86|x64|ARM64'
         
     - name: Remove PFX
       run: |
