--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,11 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  build:    
+  build:
+    strategy:
+      matrix:
+        targetplatform: [ 'x64' ]
+    
     runs-on: windows-latest
     
     env:
@@ -47,29 +51,16 @@ jobs:
     - name: Test
       run: dotnet test $env:TestProjectPath -c $env:Configuration --no-restore
     
-    # Build x86
-    - name: Build Application x86
-      run: msbuild $env:ApplicationProjectPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration
+    - name: Build Application
+      run: msbuild $env:ApplicationProjectPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration -verbosity:minimal
       env:
-        TargetPlatform: x86
+        TargetPlatform: ${{ matrix.targetplatform }}
     
-    - name: Restore Application x86
-      run: msbuild $env:SolutionPath /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier
+    - name: Restore Application
+      run: msbuild $env:SolutionPath /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier -verbosity:minimal
       env:
-        RuntimeIdentifier: win-x86
-    
-    # Build x64
-    - name: Build Application x64
-      run: msbuild $env:ApplicationProjectPath /p:Platform=$env:TargetPlatform /p:Configuration=$env:Configuration
-      env:
-        TargetPlatform: x64
-    
-    - name: Restore Application x64
-      run: msbuild $env:SolutionPath /t:Restore /p:Configuration=$env:Configuration /p:RuntimeIdentifier=$env:RuntimeIdentifier
-      env:
-        RuntimeIdentifier: win-x64
+        RuntimeIdentifier: win-${{ matrix.targetplatform }}
 
-    # Package
     - name: Decode PFX
       run: |
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.BASE64_ENCODE_PFX }}")
@@ -78,12 +69,11 @@ jobs:
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
     
     - name: Build package
-      #run: msbuild $env:SolutionPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.Pfx_Key }} -verbosity:minimal
-      run: msbuild $env:SolutionPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.PFX_KEY }} -verbosity:minimal
+      run: msbuild $env:SolutionPath /p:Configuration=$env:Configuration /p:Platform=$env:TargetPlatform /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=$env:SigningCertificate /p:PackageCertificatePassword=${{ secrets.PFX_KEY }} -verbosity:minimal
       env:
         AppxBundle: Always
-        #BuildMode: SideloadOnly
-        TargetPlatform: 'x86|x64'
+        BuildMode: SideloadOnly
+        TargetPlatform: ${{ matrix.targetplatform }}
         
     - name: Remove PFX
       run: |
